--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,11 @@
 {
-	"name": "angular-persian-tools",
-	"version": "1.0.0",
+	"name": "angular-persian-tools-demo",
+	"version": "0.0.0",
 	"authors": [
 		"netfars@gmail.com"
 	],
-	"description": "AngularJS Filters for pesian language localization.",
+	"description": "Demo",
 	"keywords": [
-		"angularjs",
-		"persian",
-		"farsi",
-		"digits"
 	],
 	"license": "MIT",
 	"ignore": [
@@ -20,7 +16,10 @@
 		"tests"
 	],
 	"dependencies": {
-		"angular":"~1.2.0"
+		"angular":"~1.2.0",
+		"angular-sanitize":"~1.2.0",
+		"angular-route":"~1.2.0",
+		"angular-touch":"~1.2.0"
 	},
 	"devDependencies": {
 	}
