--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,8 @@
 {
-	"name": "angular-persian-tools-demo",
-	"version": "0.0.0",
-	"authors": [
-		"netfars@gmail.com"
-	],
-	"description": "Demo",
-	"keywords": [
-	],
-	"license": "MIT",
-	"ignore": [
-		"**/.*",
-		"node_modules",
-		"bower_components",
-		"test",
-		"tests"
-	],
-	"dependencies": {
-		"angular":"~1.2.0",
-		"angular-sanitize":"~1.2.0",
-		"angular-route":"~1.2.0",
-		"angular-touch":"~1.2.0"
-	},
-	"devDependencies": {
-	}
+  "name": "angular-persian",
+  "description": "Angular Persian is an AngularJS Module which provides a set of filters for persian localization.",
+  "main": "dist/angularpersian.js",
+  "version": "2.0.0",
+  "dependencies": {}
 }
+
