--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "description": "Angular Persian is an AngularJS Module which provides a set of filters for persian localization.",
   "main": "dist/angularpersian.js",
   "version": "2.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "angular": "~1.3.0",
+    "persianjs": "~0.3.0"
+  }
 }
-
