--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-persian-tools",
-  "version": "0.0.0",
+  "name": "angular-persian",
+  "version": "2.0.0",
   "dependencies": {},
   "devDependencies": {
     "chai": "*",
