--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "main": "dist/angularpersian.js",
   "version": "2.0.2",
   "dependencies": {
-    "angular": "~1.3.0",
+    "angular": "^1.3.0",
     "persianjs": "~0.3.0"
   }
 }
